[333046] follow Findbugs advice for Constructor, concatenates String in loop using +, use of entrySet, missing break in switch